# P161_Dinacon2022_SriLanka_Alpha

./: .gitignore  Cargo.toml  README.md
assets/: agouti.blend  agouti.glb  house_crow.blend  house_crow.glb
src/: anim.rs  bev1.rs  bev2.rs  bev3.rs  bev4.rs  bev5.rs  boids.rs  bounds.rs  flight.rs  jaymath.rs  main.rs  observe.rs  velocitate.rs
